name:                system-extra
version:             0.1
synopsis:            A bunch of system utilities used by other projects
license:             MIT
license-file:        LICENSE
author:              Arnaud Bailly
maintainer:          arnaud.oqube@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     System.Docker
                     , System.Build
                     , System.IO.Extra
                     , System.Network.Extra
                     , System.ProcessControl
  build-depends:       base
                     , bytestring, directory, process
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror -fno-warn-orphans 
  default-language:    Haskell2010

Test-Suite tests
   Default-Language:  Haskell2010
   hs-source-dirs:    test
   type:              exitcode-stdio-1.0
   main-is:           test.hs
   ghc-options:       -threaded -Wall -fno-warn-orphans -rtsopts
   build-depends: base
                , hspec
                , QuickCheck
                , system-extra